[tool.poetry]
name = "url_monitor"
version = "0.1.0"
description = ""
authors = ["Veronika Dmitrievskaya <nika.dmitrievskaya@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.63.0"
gino = {extras = ["starlette"], version = "^1.0.1"}
httpx = "^0.17.1"
alembic = "^1.5.8"
psycopg2 = "^2.8.6"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
